fixed video overlap

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -15,6 +15,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    z-index: 1;
 }
 
 ::-webkit-scrollbar {
